--- a/KTMBaner/KTMBaner/Base.lproj/Main.storyboard
+++ b/KTMBaner/KTMBaner/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Dax-Dg-Lgt">
     <dependencies>
-        <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -4564,6 +4563,163 @@ BANER, Pune 411045</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ba0-eZ-c0F" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="7435.5" y="283.5"/>
+        </scene>
+        <!--Cost View Controller-->
+        <scene sceneID="9Am-GO-BCy">
+            <objects>
+                <viewController storyboardIdentifier="CostViewController" id="hEI-ts-isl" customClass="CostViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZhU-Dw-0b4"/>
+                        <viewControllerLayoutGuide type="bottom" id="V9N-Gm-dXy"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="3sR-MA-Xzf">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5rh-nB-74M">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SuY-7j-AHB">
+                                        <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="208" id="933-EB-iPE"/>
+                                            <constraint firstAttribute="height" constant="49" id="XRn-6m-2N7"/>
+                                        </constraints>
+                                        <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="4" maxX="0.0" maxY="2"/>
+                                        <state key="normal" title="Check part prices" image="ic_launcher.png">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="933-EB-iPE"/>
+                                                <exclude reference="XRn-6m-2N7"/>
+                                            </mask>
+                                        </variation>
+                                        <variation key="heightClass=regular-widthClass=compact">
+                                            <mask key="constraints">
+                                                <include reference="933-EB-iPE"/>
+                                                <include reference="XRn-6m-2N7"/>
+                                            </mask>
+                                        </variation>
+                                        <connections>
+                                            <action selector="actionBackButton:" destination="K2q-d1-SrH" eventType="touchUpInside" id="PxE-sv-RDc"/>
+                                            <action selector="actionBackButton:" destination="AHw-gG-5fP" eventType="touchUpInside" id="UXw-Mo-ZOz"/>
+                                            <action selector="actionBackButton:" destination="dOj-Ff-mFn" eventType="touchUpInside" id="etc-Iq-ani"/>
+                                            <action selector="actionBackButton:" destination="hEI-ts-isl" eventType="touchUpInside" id="jQY-U8-hJk"/>
+                                            <action selector="actionBackButton:" destination="X8Y-j2-Wp5" eventType="touchUpInside" id="v14-CL-bma"/>
+                                            <action selector="actionBackButtonPressed:" destination="83A-3X-oet" eventType="touchUpInside" id="qzJ-yl-yK0"/>
+                                            <action selector="onBackButton:" destination="SRG-WS-zR2" eventType="touchUpInside" id="VBC-Gx-e1U"/>
+                                        </connections>
+                                    </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="back_white.png" translatesAutoresizingMaskIntoConstraints="NO" id="cH5-er-eaF">
+                                        <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="O0p-s2-yaV"/>
+                                            <constraint firstAttribute="height" constant="26" id="fQS-1s-SUi"/>
+                                        </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="O0p-s2-yaV"/>
+                                                <exclude reference="fQS-1s-SUi"/>
+                                            </mask>
+                                        </variation>
+                                        <variation key="heightClass=regular-widthClass=compact">
+                                            <mask key="constraints">
+                                                <include reference="O0p-s2-yaV"/>
+                                                <include reference="fQS-1s-SUi"/>
+                                            </mask>
+                                        </variation>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.94901960780000005" green="0.39607843139999999" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="centerY" secondItem="SuY-7j-AHB" secondAttribute="centerY" id="2ov-Qx-3CA"/>
+                                    <constraint firstItem="cH5-er-eaF" firstAttribute="leading" secondItem="5rh-nB-74M" secondAttribute="leading" constant="3" id="hWj-7g-jtj"/>
+                                    <constraint firstAttribute="height" constant="65" id="jWW-P1-sq0"/>
+                                    <constraint firstItem="SuY-7j-AHB" firstAttribute="leading" secondItem="5rh-nB-74M" secondAttribute="leading" constant="25" id="mSE-2D-r1n"/>
+                                    <constraint firstAttribute="centerY" secondItem="cH5-er-eaF" secondAttribute="centerY" constant="-0.5" id="zsF-so-vP3"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="subviews">
+                                        <exclude reference="SuY-7j-AHB"/>
+                                        <exclude reference="cH5-er-eaF"/>
+                                    </mask>
+                                    <mask key="constraints">
+                                        <exclude reference="jWW-P1-sq0"/>
+                                        <exclude reference="2ov-Qx-3CA"/>
+                                        <exclude reference="mSE-2D-r1n"/>
+                                        <exclude reference="hWj-7g-jtj"/>
+                                        <exclude reference="zsF-so-vP3"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="subviews">
+                                        <include reference="SuY-7j-AHB"/>
+                                        <include reference="cH5-er-eaF"/>
+                                    </mask>
+                                    <mask key="constraints">
+                                        <include reference="jWW-P1-sq0"/>
+                                        <include reference="2ov-Qx-3CA"/>
+                                        <include reference="mSE-2D-r1n"/>
+                                        <include reference="hWj-7g-jtj"/>
+                                        <include reference="zsF-so-vP3"/>
+                                    </mask>
+                                </variation>
+                            </view>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ndh-hz-Okr">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="V9N-Gm-dXy" firstAttribute="top" secondItem="Ndh-hz-Okr" secondAttribute="bottom" id="2yl-SE-GEJ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Ndh-hz-Okr" secondAttribute="trailing" constant="-16" id="9iA-No-Rk2"/>
+                            <constraint firstItem="Ndh-hz-Okr" firstAttribute="top" secondItem="5rh-nB-74M" secondAttribute="bottom" id="RbI-YJ-1G2"/>
+                            <constraint firstItem="Ndh-hz-Okr" firstAttribute="leading" secondItem="3sR-MA-Xzf" secondAttribute="leadingMargin" constant="-16" id="dmA-2U-rWN"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="5rh-nB-74M" secondAttribute="trailing" constant="-16" id="oza-Ec-VcP"/>
+                            <constraint firstItem="5rh-nB-74M" firstAttribute="leading" secondItem="3sR-MA-Xzf" secondAttribute="leadingMargin" constant="-16" id="qOp-de-524"/>
+                            <constraint firstItem="5rh-nB-74M" firstAttribute="top" secondItem="3sR-MA-Xzf" secondAttribute="topMargin" id="tYi-TG-X7Z"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="5rh-nB-74M"/>
+                                <exclude reference="Ndh-hz-Okr"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="2yl-SE-GEJ"/>
+                                <exclude reference="9iA-No-Rk2"/>
+                                <exclude reference="RbI-YJ-1G2"/>
+                                <exclude reference="dmA-2U-rWN"/>
+                                <exclude reference="oza-Ec-VcP"/>
+                                <exclude reference="qOp-de-524"/>
+                                <exclude reference="tYi-TG-X7Z"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="5rh-nB-74M"/>
+                                <include reference="Ndh-hz-Okr"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="2yl-SE-GEJ"/>
+                                <include reference="9iA-No-Rk2"/>
+                                <include reference="RbI-YJ-1G2"/>
+                                <include reference="dmA-2U-rWN"/>
+                                <include reference="oza-Ec-VcP"/>
+                                <include reference="qOp-de-524"/>
+                                <include reference="tYi-TG-X7Z"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <connections>
+                        <outlet property="scrollView" destination="Ndh-hz-Okr" id="DOT-zy-t0W"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KGY-cf-AN6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="8137.5" y="278.25"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="eOM-Hw-XXm">
